--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="finish" xml:space="preserve">
+    <value>Finish Time</value>
+  </data>
+  <data name="frequency" xml:space="preserve">
+    <value>Frequency (Hz)</value>
+  </data>
+  <data name="ignorelastsample" xml:space="preserve">
+    <value>Ignore the last sample</value>
+  </data>
+  <data name="samplingrate" xml:space="preserve">
+    <value>Sampling Rate (Hz)</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="sawtooth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_sawtooth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -124,11 +136,20 @@
   <data name="scalaroperation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\operation_scalar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="signaltemplates" xml:space="preserve">
+    <value>Signal Templates</value>
+  </data>
   <data name="sine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_sine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="square" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_square.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="start" xml:space="preserve">
+    <value>Start Time</value>
+  </data>
+  <data name="templatename" xml:space="preserve">
+    <value>Template</value>
   </data>
   <data name="triangle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_triangle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
