--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="scalaroperation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\operation_scalar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="scalaroperation_text" xml:space="preserve">
+    <value>Scalar</value>
+  </data>
   <data name="signaltemplates" xml:space="preserve">
     <value>Signal Templates</value>
   </data>
