--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -117,9 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="convolution" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\convolution.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="convolutionimg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\convolutionImg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="convolutionmode" xml:space="preserve">
+    <value>Convolution Mode</value>
+  </data>
+  <data name="downsample" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\downsample.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="downsampleimg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\downsampleImg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="errorinvalidoriginalsignal" xml:space="preserve">
     <value>Before performing any operation is necessary to select a source. 
 Click in the Signal tab and select a signal source.</value>
+  </data>
+  <data name="fft" xml:space="preserve">
+    <value>FFT</value>
   </data>
   <data name="finish" xml:space="preserve">
     <value>Finish Time</value>
@@ -130,15 +149,20 @@ Click in the Signal tab and select a signal source.</value>
   <data name="ignorelastsample" xml:space="preserve">
     <value>Ignore the last sample</value>
   </data>
+  <data name="returnonlyvalid" xml:space="preserve">
+    <value>Return only valid samples</value>
+  </data>
   <data name="samplingrate" xml:space="preserve">
     <value>Sampling Rate (Hz)</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="sawtooth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_sawtooth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="scalaroperation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\operation_scalar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scalaroperationimg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scalarimg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="scalaroperation_text" xml:space="preserve">
     <value>Scalar</value>
