--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="convolution" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgconvolution" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\convolution.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="convolutionimg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgconvolutionmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\convolutionImg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="convolutionmode" xml:space="preserve">
     <value>Convolution Mode</value>
   </data>
-  <data name="downsample" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgdownsample" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\downsample.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="downsampleimg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgdownsamplemini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\downsampleImg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="errorinvalidoriginalsignal" xml:space="preserve">
@@ -155,13 +155,13 @@ Click in the Signal tab and select a signal source.</value>
   <data name="samplingrate" xml:space="preserve">
     <value>Sampling Rate (Hz)</value>
   </data>
-  <data name="sawtooth" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgsawtooth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_sawtooth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="scalaroperation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgscalar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\operation_scalar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="scalaroperationimg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgscalarmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\scalarimg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="scalaroperation_text" xml:space="preserve">
@@ -170,10 +170,10 @@ Click in the Signal tab and select a signal source.</value>
   <data name="signaltemplates" xml:space="preserve">
     <value>Signal Templates</value>
   </data>
-  <data name="sine" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgsine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_sine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="square" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgsquare" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_square.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="start" xml:space="preserve">
@@ -182,10 +182,22 @@ Click in the Signal tab and select a signal source.</value>
   <data name="templatename" xml:space="preserve">
     <value>Template</value>
   </data>
-  <data name="triangle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgtriangle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_triangle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cosine" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgcosine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\signals_commonsignals_cosine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgfft" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\operation_fft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgfftmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgfftmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dynamictrigonometricvalues" xml:space="preserve">
+    <value>Dynamic (slower, uses less memory)</value>
+  </data>
+  <data name="uselookuptable" xml:space="preserve">
+    <value>Use trigonometric table (faster)</value>
   </data>
 </root>
