--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -206,4 +206,16 @@ Click in the Signal tab and select a signal source.</value>
   <data name="imgifftmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imgifftmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imgramp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\signals_commonsignals_ramp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rampfinish" xml:space="preserve">
+    <value>Ramp Finish</value>
+  </data>
+  <data name="rampstart" xml:space="preserve">
+    <value>Ramp Start</value>
+  </data>
+  <data name="returntozero" xml:space="preserve">
+    <value>Return value to zero in the end</value>
+  </data>
 </root>
