--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -257,7 +257,7 @@ Click in the Signal tab and select a signal source.</value>
   <data name="ignorefirstrow" xml:space="preserve">
     <value>Ignore first row</value>
   </data>
-  <data name="imgcsvsignal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="imgcsvfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\csv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="samplinginterval" xml:space="preserve">
@@ -424,5 +424,8 @@ Click in the Signal tab and select a signal source.</value>
   </data>
   <data name="imgsplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\splash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgexportcsv" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\csv1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
