--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -428,4 +428,7 @@ Click in the Signal tab and select a signal source.</value>
   <data name="imgexportcsv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\csv1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="extensionsize" xml:space="preserve">
+    <value>Extension size (0 to use next power of 2)</value>
+  </data>
 </root>
