--- a/trunk/src/WaveletStudio.MainApplication/Forms/DiagramForm.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Forms/DiagramForm.resx
@@ -757,7 +757,7 @@
   <data name="AppMenuButton.ForegroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
-        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAqXAAAKlwF94fYaAAAAFnRFWHRDcmVhdGlvbiBUaW1l
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAqWAAAKlgGvphT+AAAAFnRFWHRDcmVhdGlvbiBUaW1l
         ADA4LzA4LzExhpqAPwAAABx0RVh0U29mdHdhcmUAQWRvYmUgRmlyZXdvcmtzIENTNXG14zYAAASfcHJW
         V3ic7VnLcdswEKUIEuSS+LSQFjK6Oy2khWQmytUlpA03k1NOGZWSmXSQZHcBkKAoO5IoUpd99NCiJOPt
         D/uBf/75/rt4Lp7/Io7HI9+OLy8vfHs5HA58O+z3e77ti6Lgm0AgEAgEAoFAIBAIBALBwwFt47zW+mH8
@@ -21562,4 +21562,7 @@
         AAD//wAA//8AAA==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>62</value>
+  </metadata>
 </root>
