--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -449,4 +449,10 @@ Click in the Signal tab and select a signal source.</value>
   <data name="imgtextmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\textmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imgupsample" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upsample.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgupsamplemini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upsamplemini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
