--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -476,4 +476,22 @@ Click in the Signal tab and select a signal source.</value>
   <data name="sortsamples" xml:space="preserve">
     <value>Sort Samples</value>
   </data>
+  <data name="imgshift" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgshift.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgshiftmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgshiftmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imginvert" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imginvert.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imginvertmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imginvertmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgunique" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgunique.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imguniquemini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imguniquemini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
