--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -494,4 +494,10 @@ Click in the Signal tab and select a signal source.</value>
   <data name="imguniquemini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imguniquemini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imginterpolate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imginterpolation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imginterpolatemini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imginterpolationmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
