--- a/trunk/src/WaveletStudio.MainApplication/Forms/DiagramFormMainMenu.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Forms/DiagramFormMainMenu.resx
@@ -3793,4 +3793,69 @@
         v8B9fuKaH2hr/j/BB18jAYsoTiTRAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="ExportMenuItem.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAAAAAAAACoCAAAJgAAABAQAAAAAAAAaAUAAM4IAAAoAAAAIAAAAEAAAAABAAgAAAAAAAAE
+        AAAAAAAAAAAAAAABAAAAAQAAAAAAAE8YCABQGgoAUhwMAFQeDgBVIA8ARi8cAFchEQBZIhIAWyUVAF0n
+        FwBdKBcAXikZAEowHQBQMx4AUTUeAGItHQBxLhYAZzweAHIwFwB0MhkAdjUdAHg3HwBYOCAAXDggAGYx
+        IQBoMyMAaDQjAGo3JgBsOSkAbj0sAHk5IgB7PCUAfT8oAFxHOABdSTkAY0IpAHJALwB+QSkAdFAtAHVD
+        MwB1RDMAd0Y2AHhFNgB6STkAfE09AH5ZPwB/UEEAgEMsAIJGLwCGUSsAgUYwAINIMwCESTMAhkw2AIhP
+        OgCIUDoAilM+AIheOwCOXjoAjmI3AI9hPQCWaDkAmWo7AJ1tPACgbz0AonA+AKVyPwCAUEEAg1NEAIJU
+        RACMVkIAj1pGAIVYSACIW0wAiFxMAJFdSgCLX1AAiWFEAJJmQgCVaUYAm2lFAJNhTgCUYU8Al2lJAJpr
+        SgCabk0AnW1MAI5iVACWZFIAmWlXAJFmWACTalwAlGpcAJtsWgCcbVsAjnBeAJdwUQCec1EAm3VWAJ11
+        VQCecF8ApnNBAKZ0QgCodkQAqXhHAKp6SgCrfEwArHxNAJduYACYbmEAmXJlAJ1+ZgCddmgAn3ltAKFz
+        YwChdGQAo3hoAKZ7awCheW0ApntsAKJ+cACof3AAr4FTALyWbwCmgXUAqoN0AK2LcwCrjHcAqIV5AK2G
+        eACriX0ArIl9ALCLfQC+mXMArYyBALKOgQCwkIUAtZKEALOTiQCzlIkAt5WJALaXjQC1mI0AupiNALma
+        kQC5nJAAvJyRALqelAC/n5QAvqCWAL2hmAC/ppoAv6ScAMCjmADCppwAwaieAMWqnwDDqqIAxamgAMas
+        owDFraQAya+mAMewpwDJsKYAx7KpAMqyqgDKs6wAzLWtAM64sADQu7MA0r22ANO/uQDUv7gA1cK7ANbE
+        vQDYxb8A18XAANnHwQDXycEA2cjCAN/SzQDi1s8A6NjTAOna1QDr3NUA7NzWAOze2QDu4NoA7uHcAPDg
+        2wDw4t0A8eTeAPTm3wDy5eAA9ObhAPTo4gD26eQA+OrmAPjs5wD67ekA/O/qAPzv7AD78OsA/PDrAP7y
+        7QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1LS0VFLS0pKSUeHhsbGxAQDAwJCQUFAwMDAwMAAAAA
+        WHp4eHhfX1pZUkxIRzk3NjYwMCEgIBUVExERAwAAAABbfk1LRUUvLS0pKSUeHhsbGxAQDAkJCQkDAxED
+        AAAAAF2CWMbGxsXFxcDFwMDAwMDAwMC5ubm5ubkDFQMAAAAAboVbxsbGxcXFwMXFwMDAwMC9wMC5ubm5
+        uQMVAwAAAABviF3GxsbFxcW5xcDFwMXAwL3AwMC5ubm5CRUDAAAAAHGKbsbGxsbFxSTAxcDFwMDAwL3A
+        wMC5wLkJIAkAAAAAeIxvxsbGxsASPiLAxcDFwMDAwMDAwLnAuQkgCQAAAAB5kHHGxsbATj5DJyLAxcDF
+        wMXAvb3AvcC5DCAJAAAAAH2UeMrGxU4+Q0M+JyLAxcDFwMDAwL3Au70MMAsAAAAAgpZ5xsZRQ0NDaGc+
+        JyLAxcDFwMDAvb3AvRswDAAAAACEm33NxTtoQ2hra2c+JyLAxcDFwMXAvb29GzYQAAAAAIebgsrFO2ln
+        azuGa0M+JyLAxcDAwMXAwMAbNhAAAAAAiqGEysU9a2tXs3CGa2g+JyLAxcXAwMDAwBs3GwAAAACMoYfN
+        xU57V8DGtXCGa0M+JyK5xcW5YMDAHjkbAAAAAIyois3FV2TAxsbGtXCGa2g+JyK5uS4NwMAeRxsAAAAA
+        lKiMzcV/wMrKysrGtXCGa2c+Jw0YPA/AwClIHgAAAACUq4zNzcXKysrKysrGtXCGa2dDPkM+D8DFKUge
+        AAAAAJurlM3Nzc3KysrKysrGtXB8aENoQ0MPxcApUiUAAAAAm6uZzc3Nzc3Nys3KysrGuVFrQ2dDQw/F
+        xS1ZKQAAAAChq5vNzc3Nzc3NzcrKysq9MkNnZ2dDD8DFLVopAAAAAKGvm83Nzc3Nzc3NysrKxVBDa2tr
+        a2gYxsVFXy0AAAAAoa+hzc3Nzc3Nzc3NzcZ/ZGRkZGRkYVfAxkVfLQAAAAClr6HNzc3Nzc3Nzc3NysC9
+        vb29wMDAvcbGRXhFAAAAAKixoc3Nzc3Nzc3Nzc3NysrKysrGxsbGxsZLeEUAAAAAqLSoo6OhoZmZlJSP
+        jIeHhH19cnJvbl1bWE14SwAAAACotLGxsa+srKurq6OloaGblpaQkIyKiIWCfnpLAAAAAKirqKWjoaGZ
+        mZmZlIyMioeEhH15eHFvbl1bWE0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//////////8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AA
+        AAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AA
+        AAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAP//////////ygAAAAQAAAAIAAAAAEACAAAAAAAAAEAAAAA
+        AAAAAAAAAAEAAAABAAAAAAAAEhUaABYZHgBOGAgAURsMAFQeDwBGLxwAVyESAFkjEwBeKRkASjAdAFE0
+        HgBqJAoAbCcOAG0oDwBuKhEAbywTAGEtHQBwLRQAcjAXAHIwGAB0MxoAdTUdAFo4IABkLyAAZzMiAGs4
+        KAB3OCAAeTojAIJIMQCESjUAiE86AIpSPgCcalcAoXZlAKh8awCof28ArIR1ALKLfQC0joEAtpKFALmU
+        hgC5looAupmNALyZjAC9nI8Avp6SAMCfkwDCopcAxaWaAMWonQDIqp4Aya2jAMywpgDOs6kA0LiuANK7
+        sgDUvLMA1b61ANbBugDaxr4A2snCAN3KwwDey8UA38zFAODPyADi0coA49PMAOTTzgDl1c8A5tbRAObY
+        0gDm29cA6NjTAOjZ1QDr3NcA59zYAOve2QDt4t0A7+TgAPPp5gD17eoA9u7sAPfw7QD48e8A+/XzAP75
+        9wD++fgA//7+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASEhISEhISEhISEhISEgAAEkNDPjw7OTQy
+        LywqJxIAABJLS0sqPjw5NTIvLCoSAAAST08sDCpDPjk2My8sEgAAElAsDAwMLEY+Ozc0MRIAABJREhMy
+        FgwsSEM8OTQSAAASUxM+UTwTDCxNPiI6EgAAElM+U1FRPBMMKR4fPhIAABJTVFVRUVE+ExISID4SAAAS
+        U1NUU1FRTx4SDCBDEgAAElNUWFRUTx4SDAwgQxIAABJTU1RUVVNRUVBPTUMSAAASU1NTU1NTU1FQT01D
+        EgAAEhISEhISEhISEhISEhIAAAAAAAAAAAAAAAAAAAAAAP//AACAAQAAgAEAAIABAACAAQAAgAEAAIAB
+        AACAAQAAgAEAAIABAACAAQAAgAEAAIABAACAAQAAgAEAAP//AAA=
+</value>
+  </data>
 </root>
