--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -518,4 +518,10 @@ Click in the Signal tab and select a signal source.</value>
   <data name="imgmuxmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imgmuxmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imgswitch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgswitch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgswitchmini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgswitchmini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
